--- a/web/pom.xml
+++ b/web/pom.xml
@@ -1,16 +1,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>training.time-tracker</groupId>
-        <artifactId>time-tracker-parent</artifactId>
-        <version>0.3.1-SNAPSHOT</version>
-    </parent>
+	<parent>
+		<groupId>training.time-tracker</groupId>
+		<artifactId>time-tracker-parent</artifactId>
+		<version>0.3.1-SNAPSHOT</version>
+	</parent>
 
-    <artifactId>time-tracker-web</artifactId>
-    <packaging>war</packaging>
-    <name>Time Tracker (Web)</name>
+	<artifactId>time-tracker-web</artifactId>
+	<packaging>war</packaging>
+	<name>Time Tracker (Web)</name>
 
-
+	<dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 </project>
